# Groww-AI-agent

./: README.md  pyproject.toml
.github/workflows/: weekly-pulse.yml
config/: groww.yaml
data/runs/groww/2026-W23/: ingest.json
data/runs/test_groww/2026-W23/: ingest.json
mcp-servers/play-store-reviews/: README.md  pyproject.toml
mcp-servers/play-store-reviews/src/play_store_reviews/: __init__.py  cache.py  generate_10_weeks.py  models.py  scraper.py  server.py
mcp-servers/play-store-reviews/src/play_store_reviews_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-servers/play-store-reviews/tests/: test_cache.py  test_scraper.py  test_server.py
src/pulse/: __init__.py  cli.py  config.py  orchestrator.py
src/pulse/analysis/: __init__.py  cluster.py  embeddings.py  reduce.py
src/pulse/audit/: __init__.py  ledger.py  lock.py
src/pulse/delivery/: __init__.py  deliver.py  docs_client.py  gmail_client.py  mcp_http_client.py  play_store_client.py
src/pulse/ingest/: __init__.py  adapter.py  pii.py
src/pulse/models/: __init__.py  models.py
src/pulse/render/: __init__.py  docs.py  email.py
src/pulse/summarize/: __init__.py  prompts.py
src/pulse_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_analysis.py  test_analysis_integration.py  test_cli.py  test_config.py  test_delivery.py  test_delivery_integration.py  test_ingest.py  test_ledger.py  test_orchestrator.py  test_render.py  test_summarize.py  test_summarize_integration.py
